<resources>
    <string name="app_name">Bus Services</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mybus">My Bus</string>
    <string name="contacts">Route Incharge</string>
    <string name="about_us">About Us</string>
    <string name="rating">Rating</string>
    <string name="share">Share</string>
    <string name="policy">Privicy Policy</string>
    <string name="user_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bus_list">Bus List</string>
    <string name="logout">Log Out</string>
</resources>